Валидация параметров запуска